<resources>
    <string name="app_name">WorkoutApp</string>

    <string name="title_activity_authentication">Authentication</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_fragment_login">Login</string>
    <string name="title_fragment_register">Register</string>
    <string name="title_fragment_workouts">Workouts</string>
    <string name="title_fragment_custom">Custom Workouts</string>
    <string name="title_fragment_progress">Progress</string>
    <string name="title_fragment_settings">Settings</string>
    <string name="title_fragment_create_workout_step1">Step 1 of 3</string>
    <string name="title_fragment_create_workout_step2">Step 2 of 3</string>
    <string name="title_fragment_create_workout_step3">Step 3 of 3</string>

    <string name="description_fragment_create_workout_step1">Add exercises to your workout</string>
    <string name="description_fragment_create_workout_step2">Remove exercises to your workout</string>
    <string name="description_activity_workout">~%1$d minutes | %2$d exercises</string>
    <string name="start_button">Start</string>
    <string name="edit_setting">Edit</string>
    <string name="delete_setting">Delete</string>

    <string name="title_preference_workout">Workout Preferences</string>

    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="already_has_account"><u>Already have an account?</u>\n<u>Click here</u></string>
    <string name="does_not_have_account"><u>Don\'t have an account?</u>\n<u>Click here</u></string>
    <string name="welcome">"Welcome !"</string>

    <string name="prompt_email">Email</string>
    <string name="email_error_empty">Can\'t be empty</string>
    <string name="email_error_invalid">Has to be a valid email</string>

    <string name="prompt_password">Password</string>
    <string name="password_error_empty">Can\'t be empty</string>
    <string name="password_error_invalid">Has to be more than 5 characters</string>

    <string name="auth_success">Authentication succeeded</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="bottom_nav_workouts">Workouts</string>
    <string name="bottom_nav_custom">Custom</string>
    <string name="bottom_nav_progress">Progress</string>

    <string name="dot_menu_sign_out">Sign Out</string>
    <string name="dot_menu_settings">Settings</string>
    <string name="signed_out">Signed out</string>

    <string name="create_workout_menu_cancel">Cancel</string>
    <string name="create_workout_step1_button">Next Step (%1$d Selected)</string>
    <string name="create_workout_step2_button">Next Step (%1$d Selected)</string>
    <string name="create_workout_step3_button">Save Workout</string>

    <string name="create_workout_step3_name">Name your Workout</string>
    <string name="create_workout_step3_exercise_interval">Exercise Interval Length (seconds)</string>
    <string name="create_workout_step3_rest_interval">Rest Interval Length (seconds)</string>

    <string name="fab_add">Adds a new workout</string>

    <string name="etp_exercise_interval">Exercise Interval Length (seconds)</string>
    <string name="etp_rest_interval">Rest Interval Length (seconds)</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_workout_hint_name">Name</string>

    <string name="count_down_timer">%1$d</string>
    <string name="state_pause">Pause</string>
    <string name="state_go">Go!</string>
    <string name="state_end">End</string>
    <string name="exercise_title">%1$s</string>
</resources>