<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cCreateWorkoutStep3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.CreateWorkoutStep3Fragment">

    <TextView
        android:id="@+id/tvWorkoutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/etWorkoutName"
        android:text="@string/create_workout_step3_name"
        app:layout_constraintBottom_toTopOf="@+id/etWorkoutName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etWorkoutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/create_workout_hint_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvExerciseInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/etExerciseInterval"
        android:text="@string/create_workout_step3_exercise_interval"
        app:layout_constraintBottom_toTopOf="@+id/etExerciseInterval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etExerciseInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWorkoutName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvRestInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_workout_step3_rest_interval"
        app:layout_constraintBottom_toTopOf="@+id/etRestInterval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etRestInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etExerciseInterval"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>