<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CPlayWorkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlayActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cImageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:elevation="6dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvExerciseTitle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:elevation="6dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="0dp"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"
        android:text="@string/exercise_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cImageView" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:elevation="6dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:text="@string/state_pause"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExerciseTitle" />

    <TextView
        android:id="@+id/tvCountDownTimer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="6dp"
        android:gravity="center"
        android:text="@string/count_down_timer"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvState"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>